--- a/style.css
+++ b/style.css
@@ -1,8 +1,26 @@
 
 body{
     margin: 0 auto;
-    font-family: ヒラギノ角ゴ ProN;
+    /* font-family: ヒラギノ角ゴ ProN; */
+    font-family: 'Hiragino Kaku Gothic ProN';
 }
+
+header .topbar{
+    width: 100%;
+    padding: 64px 52px;
+}
+header .topHeader{
+    width: 100%;
+    padding: 64px 52px;
+}
+header .topbar{
+    width: 100%;
+    padding: 64px 52px;
+}
+
+
+
+
 
 
 h1{
