--- a/style.css
+++ b/style.css
@@ -1,30 +1,42 @@
 
 body{
     margin: 0 auto;
-    font-family: ヒラギノ角ゴ ProN;
+    font-family: 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;    
 }
 
 
 h1{
     float: left;
+    font-size: 40px;
+    margin: 0;
+    font-family: 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;
+
 }
 
 .topmenu{
     display: block;
+    margin: 30px 30px 10px 30px;
+    
 }
 
 .sidenav ul{
     overflow: hidden;
     float: right;
+    margin: 0;
+    padding: 0;
+    text-align: center;
+
 }
 
 .sidenav li{
     float: left;
+    
 }
 
 .sidenav li a{
     text-decoration: none;
     display: block;
+    padding: 10px;
 }
 
 .sidenav li a:hover{
@@ -33,6 +45,12 @@ h1{
 
 .mainpic{
     text-align: center;
+    
+}
+
+.mainpic img{
+    width: 100%;
+    height: 1092.5px;
 }
 
 img{
@@ -51,4 +69,35 @@ ul li {
 footer{
     background-color: black;
     color: white;
+    font-size: 15px;
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    text-indent: 20px;
+    margin-bottom: none;
+    padding-top: 10px;
+    padding-left: 10px;
+}
+
+footer p{
+    margin: 0;
+}
+
+
+
+@media screen and (max-width:700px){
+    body{
+        width:100%;
+    }
+
+    .img-box{
+        margin: 0px 18px;
+        display: flex;
+        justify-content: space-around;
+        flex-wrap: wrap;
+    }
+
+    .contact{
+        width: 100%;
+    }
 }
