--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 body{
-    margin: 0 auto;
+    width: 100%;
     font-family: 'Hiragino Kaku Gothic ProN', 'ヒラギノ角ゴ ProN W3', sans-serif;    
 }
 header{
@@ -33,7 +33,7 @@ h1{
 
 .topmenu{
     display: block;
-    margin: 30px 30px 10px 30px;
+    margin: 30px 0px 10px 0px;
     
 }
 
@@ -81,14 +81,10 @@ footer{
     width: 100%;
     height: 40px;
     line-height: 40px;
-    text-indent: 20px;
-    margin-bottom: none;
-    padding-top: 10px;
-    padding-left: 10px;
 }
 
 footer p{
-    margin: 0;
+    width: 100%;
 }
 
 
