--- a/style2.css
+++ b/style2.css
@@ -1,6 +1,4 @@
-.mainpic img{
-    width: 100%;
-}
+/* ここから投稿記事latest */
 h2{
     color:#707070;
     font-family: 'Hiragino Kaku Gothic ProN';
@@ -51,7 +49,10 @@ ul li {
     font-family: 'Hiragino Kaku Gothic ProN';
     font-size: 30px;
 }
+/* ここまで投稿記事latest */
 
+
+/* ここからcontact */
 .contact{
     width: 100%;
    
@@ -71,13 +72,15 @@ ul li {
     padding: 10px;
     margin: 2%;
     border: solid #e9e5e5 1.5px;
+    font-size: 120%;
 }
-form input,button{
+form input{
     height: 43px;
 }
 form button{
     border-radius: 5px;
     width: 100%;
+    height: 50px;
     margin: 2%;
     color: white;
     font-family: 'Hiragino Kaku Gothic ProN';
@@ -89,3 +92,4 @@ form button{
     color:#ddd7d7;
     font-family: 'Hiragino Kaku Gothic ProN';
 }
+/* ここまでcontact */
